# Python-Yandex-Logger

./: LICENSE  README.md  pyproject.toml
logging_yandex/: emitters.py  handlers.py
python_logging_yandex/: __init__.py  handlers.py  utils.py
src/logging_yandex/: __init__.py  emitters.py  handlers.py  utils.py
src/python_logging_yandex/: emitters.py  handlers.py  types.py
